--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,5 +1,6 @@
 <!-- <h1>Questions#answer</h1>
 <p>Find me in app/views/questions/answer.html.erb</p> -->
+<h1>Stupid Coaching</h1>
 
-<h2><%= @question %></h2>
-<h2><%= @answer %></h2>
+<p><%= @question %></p>
+<p><%= @answer %></p>
