--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,6 +1,8 @@
 <!-- <h1>Questions#ask</h1>
 <p>Find me in app/views/questions/ask.html.erb</p> -->
+<h1>Stupid Coaching</h1>
 
+<p>Ask your coach anything:</p>
 <form action="/answer">
   <input type="text" name="question">
   <input type="submit" value="Ask!">
